@@ -1,20 +1,17 @@
 package org.openmetadata.service.search.elasticsearch.dataInsightAggregators;
 
-import es.org.elasticsearch.action.search.SearchRequest;
-import es.org.elasticsearch.action.search.SearchResponse;
-import es.org.elasticsearch.index.query.QueryBuilder;
-import es.org.elasticsearch.index.query.RangeQueryBuilder;
-import es.org.elasticsearch.search.aggregations.Aggregation;
-import es.org.elasticsearch.search.aggregations.AggregationBuilders;
-import es.org.elasticsearch.search.aggregations.Aggregations;
-import es.org.elasticsearch.search.aggregations.bucket.histogram.DateHistogramAggregationBuilder;
-import es.org.elasticsearch.search.aggregations.bucket.histogram.DateHistogramInterval;
-import es.org.elasticsearch.search.builder.SearchSourceBuilder;
+import es.co.elastic.clients.elasticsearch._types.aggregations.Aggregate;
+import es.co.elastic.clients.elasticsearch._types.aggregations.Aggregation;
+import es.co.elastic.clients.elasticsearch._types.aggregations.CalendarInterval;
+import es.co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import es.co.elastic.clients.elasticsearch.core.SearchRequest;
+import es.co.elastic.clients.elasticsearch.core.SearchResponse;
+import es.co.elastic.clients.json.JsonData;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import org.jetbrains.annotations.NotNull;
 import org.openmetadata.schema.dataInsight.custom.DataInsightCustomChart;
 import org.openmetadata.schema.dataInsight.custom.DataInsightCustomChartResult;
@@ -27,54 +24,79 @@ import org.openmetadata.service.jdbi3.DataInsightSystemChartRepository;
 public class ElasticSearchSummaryCardAggregator
     implements ElasticSearchDynamicChartAggregatorInterface {
 
+  private static final String AGG_NAME = "1";
+
+  @Override
   public SearchRequest prepareSearchRequest(
       @NotNull DataInsightCustomChart diChart,
       long start,
       long end,
       List<FormulaHolder> formulas,
-      Map metricFormulaMap)
+      Map metricFormulaMap,
+      boolean live)
       throws IOException {
 
     SummaryCard summaryCard = JsonUtils.convertValue(diChart.getChartDetails(), SummaryCard.class);
-    DateHistogramAggregationBuilder dateHistogramAggregationBuilder =
-        AggregationBuilders.dateHistogram("1")
-            .field(DataInsightSystemChartRepository.TIMESTAMP_FIELD)
-            .calendarInterval(DateHistogramInterval.DAY);
+
+    Map<String, Aggregation> subAggregations = new HashMap<>();
     populateDateHistogram(
-        summaryCard.getMetrics().get(0).getFunction(),
-        summaryCard.getMetrics().get(0).getFormula(),
-        summaryCard.getMetrics().get(0).getField(),
-        summaryCard.getMetrics().get(0).getFilter(),
-        dateHistogramAggregationBuilder,
+        summaryCard.getMetrics().getFirst().getFunction(),
+        summaryCard.getMetrics().getFirst().getFormula(),
+        summaryCard.getMetrics().getFirst().getField(),
+        summaryCard.getMetrics().getFirst().getFilter(),
+        subAggregations,
+        AGG_NAME,
         formulas);
 
-    QueryBuilder queryFilter = new RangeQueryBuilder("@timestamp").gte(start).lte(end);
+    Aggregation dateHistogramAgg =
+        Aggregation.of(
+            a ->
+                a.dateHistogram(
+                        dh ->
+                            dh.field(DataInsightSystemChartRepository.TIMESTAMP_FIELD)
+                                .calendarInterval(CalendarInterval.Day))
+                    .aggregations(subAggregations));
 
-    SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
-    searchSourceBuilder.aggregation(dateHistogramAggregationBuilder);
-    searchSourceBuilder.query(queryFilter);
-    searchSourceBuilder.size(0);
-    es.org.elasticsearch.action.search.SearchRequest searchRequest =
-        new es.org.elasticsearch.action.search.SearchRequest(
-            DataInsightSystemChartRepository.getDataInsightsSearchIndex());
-    searchRequest.source(searchSourceBuilder);
-    return searchRequest;
+    Map<String, Aggregation> aggregationsMap = new HashMap<>();
+    aggregationsMap.put(AGG_NAME, dateHistogramAgg);
+
+    SearchRequest.Builder searchRequestBuilder = new SearchRequest.Builder().size(0);
+
+    if (!live) {
+      Query rangeQuery =
+          Query.of(
+              q ->
+                  q.range(
+                      r -> r.field("@timestamp").gte(JsonData.of(start)).lte(JsonData.of(end))));
+      searchRequestBuilder.query(rangeQuery);
+      searchRequestBuilder.index(DataInsightSystemChartRepository.getDataInsightsSearchIndex());
+    } else {
+      searchRequestBuilder.index(DataInsightSystemChartRepository.getLiveSearchIndex(null));
+    }
+
+    searchRequestBuilder.aggregations(aggregationsMap);
+    return searchRequestBuilder.build();
   }
 
+  @Override
   public DataInsightCustomChartResultList processSearchResponse(
       @NotNull DataInsightCustomChart diChart,
-      SearchResponse searchResponse,
+      SearchResponse<JsonData> searchResponse,
       List<FormulaHolder> formulas,
       Map metricFormulaMap) {
     DataInsightCustomChartResultList resultList = new DataInsightCustomChartResultList();
     SummaryCard summaryCard = JsonUtils.convertValue(diChart.getChartDetails(), SummaryCard.class);
-    List<Aggregation> aggregationList =
-        Optional.ofNullable(searchResponse.getAggregations())
-            .orElse(new Aggregations(new ArrayList<>()))
-            .asList();
+    Map<String, Aggregate> aggregationMap =
+        searchResponse.aggregations() != null ? searchResponse.aggregations() : new HashMap<>();
+
+    String formula = summaryCard.getMetrics().getFirst().getFormula();
+    // If formulas list is empty and formula is not null, populate it
+    if ((formulas == null || formulas.isEmpty()) && formula != null) {
+      formulas = ElasticSearchDynamicChartAggregatorInterface.getFormulaList(formula);
+    }
+
     List<DataInsightCustomChartResult> results =
-        processAggregations(
-            aggregationList, summaryCard.getMetrics().get(0).getFormula(), null, formulas, null);
+        processAggregations(aggregationMap, formula, null, formulas, null);
 
     List<DataInsightCustomChartResult> finalResults = new ArrayList<>();
     for (int i = results.size() - 1; i >= 0; i--) {
